# m3b3

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/data/: knowledge_base.txt
app/data/docs/: docintel-overview.md  (+1 more)
app/llm/: __init__.py  client.py  providers.py  section_orchestrator.py  text_tool_calls.py
app/prompts/: loader.py  section_writer_v1.j2  system_v1.j2
app/schemas/: __init__.py  chat.py
app/tools/: __init__.py  gap_policies.py  registry.py  shablon_loader.py
docs/: architecture.md
examples/: demo_common.py  fallback_demo.py  run_tool_call.py  run_tool_call_deepseek.py  run_tool_call_fallback.py
examples/answers/: transfer-notifications-kafka_deepseek_20260619_193444.md  transfer-notifications-kafka_deepseek_20260619_200545.md  transfer-notifications-kafka_deepseek_20260619_211509.md  transfer-notifications-kafka_openai_20260619_211241.md
feature-methodology-project/: shablon.md  standarts_features (3).md
feature-methodology-project/data-standard-kit/: README.md
feature-methodology-project/integration-standard-kit/: README.md
feature-methodology-project/nfr-standard-kit/: README.md
feature-methodology-project/observability-standard-kit/: README.md
feature-methodology-project/requirements-standard-kit/: README.md
feature-methodology-project/uml-diagram-standard-kit/: README.md
scripts/: benchmark.py  benchmark_results.md
tests/: test_async_llm_client.py  test_llm_providers.py  test_section_orchestrator.py  test_stream_api.py  test_text_tool_calls.py  test_tool_call.py
(+112 files in other folders)
