[project]
name = "m3-b1"
version = "0.1.0"
description = "Support assistant with LLM tool calling (search_kb)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
