[project]
name = "m3-b1"
version = "0.2.0"
description = "Support assistant with LLM tool calling (search_kb) and async LLM client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "sse-starlette>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
